# oeaLocal

./: .env.example  .env.template  .gitignore  AFTER_SETUP_GUIDE.md  CONTRIBUTING.md  CURRENT_STATE_ANALYSIS.md  DOCUMENTATION_AUDIT.md  DUCKDB_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  KNOWN_ISSUES.md  PHASE2_COMPLETION_SUMMARY.md  PHASE3_PRODUCTION_READINESS.md  PRODUCTION_ENHANCEMENTS.md  README.md  README_DUCKDB_SETUP.md  SECURITY.md  SESSION_SUMMARY.md  SETUP_FILES_INDEX.md  START_HERE.md  check_metabase.js  chronic_absenteeism_dashboard.py  class_effectiveness_dashboard.py  data_quality_profile.json  docker-compose.yml  equity_outcomes_dashboard.py  k8s-deployment.yaml  k8s_deploy.py  metabase_login.js  metabase_setup.js  performance_correlations_dashboard.py  profile_parquet_data.py  pyproject.toml  requirements.txt  rill.yaml  session-ses_3bbe.md  setup_duckdb.py  setup_duckdb_metabase.md  test_performance.py  test_rbac.py  test_rill_integration.py  (+3 more)
.github/: WORKFLOWS.md
.github/workflows/: build-push.yml  deploy-k8s.yml  test.yml
.planning/: SESSION_HANDOFF_2026-02-23.md
.sisyphus/: DATA_QUALITY_INTEGRATION_COMPLETE.md  DATA_QUALITY_INTEGRATION_STATUS.md  RILL_WORK_COMPLETE.md  SESSION_HANDOFF.md  boulder.json
.sisyphus/plans/: metabase-dashboard-setup.md  stage-4-metabase-dashboards.md
AeriesTestData2_2026/: Untitled-1.ipynb
AeriesTestData2_2026/For analysis/: 308.csv  Algebra 1A 23-26.xlsx  COMPLETE_ANALYSIS_REPORT.md  CRITICAL_DATA_GAP_REPORT.md  DATA_NORMALIZATION_REPORT.md  QUICK_START_GUIDE.md  analysis_summary.xlsx  normalize_and_analyze.py  student_id_mapping.csv  task_a_math_pipeline_analysis.xlsx  task_b_Lead_enrollment_trends.xlsx  task_b_lead_representation_analysis.xlsx  task_b_lead_trends_updated.xlsx
AeriesTestData2_2026/attendance/: attendance_2020_2021.csv  attendance_2021_2022.csv  attendance_2022_2023.csv  attendance_2023_2024.csv  attendance_2024_2025.csv  attendance_2025_2026.csv
AeriesTestData2_2026/attendance_transformed/: attendance_2020_2021.csv  attendance_2021_2022.csv  attendance_2022_2023.csv  attendance_2023_2024.csv  attendance_2024_2025.csv  attendance_2025_2026.csv
AeriesTestData2_2026/discipline/: discipline_2020_2021.csv  discipline_2021_2022.csv  (+4 more)
DataAnalysisExpert/: dashboard_validation_report.md  data_profile_report.md  db_tables_analytics.txt  full_audit_report.md  implementation_note_contract_tools_relocated.md  lineage_map.md  optimization_backlog.md  p1_percentage_semantics_chronic.txt  p1_percentage_semantics_equity.txt  perf_class_count.txt  perf_performance_corr_count.txt  performance_times_raw.txt  phase2_implementation_report.md  phase2_p1_report.md  phase2_p2_report.md  profile_chronic_range_checks.txt  profile_chronic_risk_levels.txt  profile_chronic_summary.txt  profile_chronic_trend_values.txt  profile_equity_groups.txt  profile_equity_range_checks.txt  profile_equity_summary.txt  query_failures_summary.txt  release_notes_2026-02-25.md  review_plan_and_master_prompt.md  rill_project_audit_report.md  run_query_audit.sh  run_query_audit_extended.sh  schema_chronic_absenteeism.txt  schema_class_section_comparison.txt  schema_equity_outcomes.txt  schema_performance_correlations.txt  schema_wellbeing_risk_profiles.txt  semantic_consistency_matrix.csv  sql_performance_findings.md
archive/: motherduck_duckdb_research.md
connectors/: duckdb.yaml
dashboards/: chronic_absenteeism_risk.yaml  equity_outcomes_by_demographics.yaml
docs/: ARCHITECTURE.md  DASHBOARD_GUIDE.md  DATA_FLOW_DIAGRAM.md  DUCKDB_INSPECTION_GUIDE.md  RILL_ALERT_BEST_PRACTICES.md  RILL_GUIDE.md  RILL_TROUBLESHOOTING.md  SETUP.md  aeries_motherduck_implementation.md  data_refresh_runbook.md  hex_queries_for_data_requests.md  jupyter_analytics_guide.md
local_data_stack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
models/: chronic_absenteeism_risk.sql  equity_outcomes_by_demographics.sql
oss_framework/: .env.example  OPERATIONAL_RUNBOOKS.md  PRODUCTION_DEPLOYMENT.md  STAFF_TRAINING.md  UAT_PLAN.md  __init__.py  docker-compose.yml  pytest.ini  requirements.txt
reports/: DATA_ARCHITECTURE_REVIEW.md  UAT_REPORT.txt  dashboard_performance_report.json
rill_project/: rill.yaml
schema/: chronic_absenteeism_definition.json  class_effectiveness_definition.json  equity_outcomes_definition.json  performance_correlations_definition.json  wellbeing_risk_definition.json
scripts/: export_to_rill.py  fork_public_release.py  metrics_exporter.py  run_pipeline.py  schedule_pipeline.sh
(+418 files in other folders)
